[tool.poetry]
name = "lp_backup"
version = "0.1.11"
description = "Script to create local backups from Lastpass"
authors = ["Rick Henry <fredericmhenry@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.4"
"ruamel.yaml" = "^0.15.80"
fs = "^2.1"
fs-s3fs = "^1.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
pyperclip = "^1.7"
pytest-mock = "^1.10"
pytest-cov = "^2.6"
sphinx = "^1.8"
recommonmark = "^0.4.0"
freezegun = "^0.3.11"
sphinx-rtd-theme = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
